--- a/src/podiobooks/templates/themes/pb2-jq/main/lazy/shelf_items.html
+++ b/src/podiobooks/templates/themes/pb2-jq/main/lazy/shelf_items.html
@@ -3,6 +3,6 @@
 {% for item in items %}
 	{% shelf_item item %}
 {% empty %}
-<div><p>None, sorry.</p></div>
+<div class='shelf-no-items'><p>None, sorry.</p></div>
 {% endfor %}
 
